package com.assignment2.gui;

/** Abstract product A: a button of any platform. */
public interface Button {

    void paint();
}
