package com.assignment2.gui;

/** Abstract product B: a checkbox of any platform. */
public interface Checkbox {

    void paint();
}
